# DVS128_gesture_recognization

./: README.md  preprocessing_dataset_dvs.ipynb  script_generate_dataset.py
csnn-simulator/: CMakeLists.txt  README.md
csnn-simulator/apps/: SpikingVideo.cpp  Video.cpp
csnn-simulator/dataset/: Mnist_Formatter.py
csnn-simulator/dataset/KTH/: test  train  valid
csnn-simulator/dep/libsvm/: CMakeLists.txt  Makefile  cmake_install.cmake
csnn-simulator/dep/qcustomplot/: CMakeLists.txt  Makefile  cmake_install.cmake  qcustomplot.cpp  qcustomplot.h
csnn-simulator/include/: Analysis.h  Benchmark.h  ClassParameter.h  Color.h  Debug.h  Distribution.h  Endianness.h  Experiment.h  FeatureWriter.h  Input.h  InputConverter.h  InputLayer.h  InputTool.h  Layer.h  Logger.h  Math.h  Monitor.h  NumpyInput.h  NumpyReader.h  NumpyStruct.h  Output.h  OutputConverter.h  Persistence.h  Plot.h  Process.h  SparseTensor.h  Spike.h  SpikeConverter.h  Stdp.h  Tensor.h  TensorReader.h  TensorWriter.h
csnn-simulator/include/analysis/: Activity.h  Coherence.h  SaveOutput.h  Svm.h
csnn-simulator/include/dataset/: Cifar.h  Descriptor.h  FaceMotor.h  Frame.h  Image.h  LoadSavedFeatures.h  Mnist.h  STL.h  SpikingVideo.h  Video.h
csnn-simulator/include/execution/: DenseIntermediateExecution.h  EmptyExecution.h  FusedExecution.h  ProcessExecution.h  SparseIntermediateExecution.h  SparseIntermediateExecutionNew.h
csnn-simulator/include/layer/: Convolution.h  Convolution3D.h  Pooling.h  Stream.h
csnn-simulator/include/monitor/: SaveNetwork.h
csnn-simulator/include/plot/: Delay.h  Evolution.h  Reconstruction.h  Threshold.h  Time.h
csnn-simulator/include/process/: Acceleration.h  AddSaltPepperNoise.h  Amplification.h  CompositeChannels.h  DXDY.h  EarlyFusion.h  EdgeGrid.h  Flatten.h  ImageGrid.h  Input.h  LateFusion.h  MaxScaling.h  MotionGrid.h  MotionGridV1.h  MotionGridV2.h  MotionGridV3.h  MotionGridV4.h  (+19 more)
csnn-simulator/src/: ClassParameter.cpp  Experiment.cpp  FeatureWriter.cpp  InputConverter.cpp  InputLayer.cpp  Layer.cpp  Logger.cpp  Math.cpp  NumpyInput.cpp  NumpyReader.cpp  Output.cpp  OutputConverter.cpp  Process.cpp  SpikeConverter.cpp  TensorReader.cpp  TensorWriter.cpp
(+92 files in other folders)
